<resources>
    <string name="app_name">DJamz Player</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="now_playing">Now Playing</string>
    <string name="mood_selector">Mood Selector</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="options">Options</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="djamz_player">DJAMZ PLAYER</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="dummy_lyrics">Show me the meaning of being lonely\n\nIs this the feeling
        i need to walk with\n\ntell me why i cant be there where you are\n\ntheres something missing in my heart</string>
    <string name="welcome">Welcome</string>
    <string name="or_sign_up">OR SIGN UP</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_with">SIGN IN WITH</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>


    <string name="action_example">Example action</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="or_sign_in">OR SIGN IN</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="email_required">Email address is required</string>
    <string name="password_required">Password is required</string>
    <string name="not_valid_email">Email address is not valid</string>
    <string name="press_to_exit">Press again to exit</string>
    <string name="the_list_is_empty_image">Add a item icon</string>
    <string name="its_lonely_here">It\'s lonely here</string>
    <string name="no_internet">No internet</string>
    <string name="cover_photo">Cover photo</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="delete">Delete</string>
    <string name="song_info">Song Info</string>
    <string name="press_again">Press again to exit</string>
</resources>
