<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/welcome"
            android:textSize="32sp"
            android:textAppearance="?android:textAppearanceLarge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_icon" />

        <include
            android:id="@+id/include"
            layout="@layout/login_name_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

        <Button
            android:id="@+id/sign_up_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            android:background="?selectableItemBackground"
            android:text="@string/or_sign_up"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="@+id/include"
            app:layout_constraintRight_toRightOf="@+id/include"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:padding="4dp"
            android:textStyle="bold"
            android:text="@string/forgot_password"
            android:textAppearance="?android:textAppearanceMedium"
            app:layout_constraintLeft_toLeftOf="@+id/sign_up_button"
            app:layout_constraintRight_toRightOf="@+id/sign_up_button"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

        <include layout="@layout/login_alternative"
            app:layout_constraintLeft_toLeftOf="@+id/include"
            app:layout_constraintRight_toRightOf="@+id/include"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.0"
             />
    </android.support.constraint.ConstraintLayout>
</ScrollView>

